--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -145,19 +145,30 @@ header {
 
 .main-nav li a:active,
  .main-nav li a:hover {
-  border-bottom: 2px solid #9699A5;
+  border-bottom: 2px solid #6D7B3C;
 }
 
 
 /*-------------------------------------------------
 PROFILE
 -------------------------------------------------*/
+.section-projects {
+  background-color: #f8f8f8
+}
+
+.border-box {
+  margin: 10%;
+  border: 5px solid #43423D;
+  border-radius: 10px;
+}
+
 .section-projects div {
   display: block;
+  background-color: #fff;
 }
 
 .project-box {
-  background-color: #fff;
+  /*background-color: #fff;*/
   border-radius: 5px;
   width: 100%;
   margin-left: 0%;
