--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -206,6 +206,7 @@ PORTFOLIO
 
 .section-projects h1 {
   text-align: left;
+  color: #595E62;
   margin-left: 15%;
   margin-top: -2%;
   font-weight: 300;
@@ -213,7 +214,7 @@ PORTFOLIO
 
 /*------- ICONS -------*/
 
-.icon-small i{
+.icon-small i {
   display: inline-block;
   width: 50px;
   text-align: center;
@@ -242,7 +243,7 @@ a:link,
 a:visited {
   color: #43423D;
   text-decoration: none;
-  padding-bottom: 1px;
+  padding-bottom: 0px;
   /*border-bottom: 1px solid #43423D;*/
   transition: border-bottom 0.2s, color0.2s
 }
@@ -250,12 +251,13 @@ a:visited {
 a:hover,
 a:active {
   color: #6D7B3C;
-  border-bottom: 1px solid transparent;
+  border-bottom: 0px solid transparent;
 }
 
 a img:link,
 a img:visited {
   text-decoration: none;
+  transition: transform 0.5s, opacity 0.5s;
 }
 
 
@@ -267,22 +269,19 @@ a img:visited {
 
 .tiles img {
   display: inline-block;
+  background-color: #000;
   position: relative;
   width: 100%;
-  padding: 5%;
+  padding: 0%;
   border-radius: 10%;
-  opacity: .7
+  opacity: 0.7;
+  transition: transform 0.5s, opacity 0.5s;
 }
 .tiles img:hover,
 .tiles img:active {
   opacity: 1;
-}
-
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  transition: transform 0.5s, opacity 0.5s;
+  transform: scale(1.06);
 }
 
 /*-------------------------------------------------
